Fix align itens menu hamburguer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -126,6 +126,8 @@ body {
         position: fixed;
         top: 100%;
         width: 100%;
+        margin: 0;
+        padding: 0;
         background: rgba(255, 255, 255, 0.45);
         backdrop-filter: blur(5px);
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
@@ -156,15 +158,15 @@ body {
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        padding: 0.5rem;
-        padding-left: 2.5rem;
+        padding-top: 1rem;
         gap: 1.5rem;
     }
 
     .nav-link {
         display: block;
         text-align: center;
-        padding: 1rem;
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
         width: 100%;
     }
 
@@ -198,20 +200,7 @@ body {
 
 /* Mobile */
 @media screen and (max-width: 480px) {
-    .navbar {
-        padding: 1rem 5%;
-    }
-
     .logo {
-        font-size: 1.5rem;
-    }
-
-    .nav-menu {
-        padding: 1.5rem;
-    }
-
-    .language-switcher {
-        width: 100%;
-        justify-content: center;
+        font-size: 1.2rem;
     }
 }
